Added splash screen and intake form.

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>OSU-Cascades Clinic</title>
+		<link rel="stylesheet" type="text/css" href="CSS/style.css">
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700">
+	</head>
 
-<head>
- <title>Welcome Mat: OSU Cascades Clinic Patient Intake Form</title>
- <style>
-  body {background-color: black;}
-  h1	{color: darkorange;}
-  h2	{color: darkorange;}
-  p	{color: white;}
- </style>
-</head>
+	<body>
+		<a href="http://one.cs361.osu.humanoriented.com" class="tag">
+			<div class="banner">
+				<img src="http://osucascades.edu/sites/osucascades.edu/modules/osu_cascades_top_hat/images/osu_cascades_logo.png" class="logo" alt="Oregon State University Cascades">
+			</div>
+		</a>
+		
+		<div class="main-content">
+			<h1>Welcome!</h1>
+			<a href="http://one.cs361.osu.humanoriented.com/Intake-Form.html"<h2>OSU-Cascadese Clinic Patient Intake Form</h2></a>
+			<h2>Team One: Members</h2>
+			<p>Justin Tappert</p>
+			<p>Jack Wilson</p>
+			<p>Kyleen Gonzalez</p>
+			<p>Tim Leavey</p>
+		</div>
 
-<body>
- <a href="http://osucascades.edu/" title="OSU Cascades Home">
-  <img src="oregonstate_cascadeslogo1.jpg" alt="OSUCascades" style="width:800px;height:200:200px;">
- </a>
- <h1>Welcome Mat</h1>
- <h2>OSU Cascades Clinic Patient Intake Form</h2>
- <h2>Team One</h2>
- <p>Tim Leavey</p>
- <p>Justin Tappert</p>
- <p>Kyleen Gonzalez</p>
- <p>Jack Wilson</p>
-
- 
- </body>
+	</body>
 
 </html>
