--- a/Intake-Form.html
+++ b/Intake-Form.html
@@ -16,6 +16,7 @@
 		<div class="main-content">
 			<form method="post" action="#">
 				<fieldset>
+					<div class="boxed">
 					<legend>Client Information Sheet</legend>
 						<label>Date:</label>
 						<input type="date" name="date"/>
@@ -73,7 +74,7 @@
 						<input type="text" name="partnerEmployer"/>
 						<label>Phone:</label>
 						<input type="text" name="partnerPhone"/>
-										
+					</div>					
 					<h2 class="form-header">Other Members of Your Household</h2>
 					 <!-- Want to do like select a number of members of house -->
 						<label>First Name:</label>
