--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@
 			</div>
 		</a>
 		
-		<div class="main-content">
-			<h1>Welcome!</h1>
-			<a href="http://one.cs361.osu.humanoriented.com/Intake-Form.html"<h2>OSU-Cascadese Clinic Patient Intake Form</h2></a>
-			<h2>Team One: Members</h2>
-			<p>Justin Tappert</p>
-			<p>Jack Wilson</p>
-			<p>Kyleen Gonzalez</p>
-			<p>Tim Leavey</p>
-		</div>
-	</body>
+	 <br>
+       <div class = "boxed">
+       <body>
+       <h1>Welcome to OSU Counseling Clinic</h1>
+      <h1>First-time visitor?</h1>
+         <a href="http://one.cs361.osu.humanoriented.com/Intake-Form.html" class="button" >Click Here</a>
+        </body> </div> 
+	
 
-	<footer>
-		<p>Derp</p>
-	</footer>
-
-</html>
+	<div class= "footer"><body> OSU-Cascades
+        1500 SW Chandler Avenue<br>
+       Bend, Oregon 97702<br>
+       541-322-3100<br></body>
+        </div> </html>
