--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</a>
 		
 	 <br>
-       <div class = "boxed">
+       <div class = "mainBox">
        <body>
        <h1>Welcome to OSU Counseling Clinic</h1>
       <h1>First-time visitor?</h1>
