--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 	</head>
 
 	<body>
-		<a href="http://one.cs361.osu.humanoriented.com" class="tag">
 			<div class="banner">
 				<img src="http://osucascades.edu/sites/osucascades.edu/modules/osu_cascades_top_hat/images/osu_cascades_logo.png" class="logo" alt="Oregon State University Cascades">
+				
+				<div class="topright"><a href="http://www.w3schools.com">link</a></div>
+
 			</div>
-		</a>
+		
 		
 	 <br>
        <div class = "mainBox">
