Updating Homepage, added new image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</div>
 		
 		
-	 <br>
+	
        <div class = "mainBox">
        <body>
        <h1>Welcome to OSU Counseling Clinic</h1>
@@ -25,8 +25,13 @@
         </body> </div> 
 	
 
-	<div class= "footer"><body> OSU-Cascades
-        1500 SW Chandler Avenue<br>
-       Bend, Oregon 97702<br>
-       541-322-3100<br></body>
-        </div> </html>
+	<div class= "footer"> <body>
+		OSU-Cascades<br>
+    	1500 SW Chandler Avenue<br>
+    	Bend, Oregon 97702<br>
+    	541-322-3100<br>
+    </body> 
+    </div> 
+
+
+    </html>
