Adjusted some elements on home and in form style, form still needs work... Fixes #6, #5

--- a/Intake-Form.html
+++ b/Intake-Form.html
@@ -2,30 +2,33 @@
 <html lang="en">
 	<head>
 		<title>OSU-Cascades Counseling Practicum</title>
-		<link rel="stylesheet" type="text/css" href="CSS/style.css">
+		<link rel="stylesheet" type="text/css" href="CSS/form.css">
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700">
+
 		<style>
-			.boxed {
+		/*.boxed {
 			border: 1px solid black;
 			padding: 25px;
 			line-height: 8px;
 			margin: 25 px;
-			} 
+		} 
 			
-			.centerTitle{
-				text-align: center;
-				 
-			}
+		.centerTitle{
+			text-align: center;
+			color: white;
+					 
+		}
 			
-			.box{
-				color:white;
-				width:medium;
-				height:60px;
-				background:black;
-				display: flex;
-				align-items: center
-			}
+		.box{
+			color:white;
+			width:medium;
+			height:60px;
+			background:black;
+			display: flex;
+			align-items: center
+		}*/
 		</style>
+
 	</head>
 
 	<body>
@@ -38,7 +41,7 @@
 
 			<form method="post" action="#">
 				<fieldset>				
-				<div class="centerTitle"><legend><h1>OSU Cascades counseling Practicum <br/> Client Information Sheet<h1></legend></div>
+				<div class="centerTitle"><legend><h1 id="header">OSU Cascades Counseling Practicum <br/> Client Information Sheet<h1></legend></div>
 					<div class="boxed">
 						<label>Date:</label>
 						<input type="date" name="date"/>
