--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <div class="mainBox">
 
        	<div class="welcome-header">
-       		<h1>Welcome to OSU Counseling Clinic</h1>
+       		<h1>Welcome to the OSU Counseling Clinic!</h1>
       		<h2>First-time visitor?</h2>
       		
         	<a href="http://one.cs361.osu.humanoriented.com/Intake-Form.html" class="button" >Click Here</a>
