Simply linked the submit button to the thank you screen to simulate the experience Fixes #13

--- a/Intake-Form.html
+++ b/Intake-Form.html
@@ -14,7 +14,7 @@
 		</a>
 			<div class="main-content">
 
-			<form method="post" action="#">
+			<form method="post" action="thankyou.html">
 				<fieldset>				
 				<div class="centerTitle"><legend><h1 id="header">OSU Cascades Counseling Practicum <br/> <br/> Client Information Sheet<h1></legend></div>
 					<br/>
