Basic php testing environment added

--- a/Intake-Form.html
+++ b/Intake-Form.html
@@ -7,14 +7,14 @@
 	</head>
 
 	<body>
-		<a href="http://one.cs361.osu.humanoriented.com" class="tag">
+		<a href="/" class="tag">
 			<div class="banner">
 				<img src="http://osucascades.edu/sites/osucascades.edu/modules/osu_cascades_top_hat/images/osu_cascades_logo.png" class="logo" alt="Oregon State University Cascades">
 			</div>
 		</a>
 			<div class="main-content">
 
-			<form method="post" action="thankyou.html">
+			<form method="post" action="form.php">
 				<fieldset>				
 				<div class="centerTitle"><legend><h1 id="header">OSU Cascades Counseling Practicum <br/> <br/> Client Information Sheet<h1></legend></div>
 					<br/>
