--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        		<h1>Welcome to the OSU Counseling Clinic!</h1>
       		<h2>First-time visitor?</h2>
       		
-        	<a href="http://one.cs361.osu.humanoriented.com/Intake-Form.html" class="button" >Click Here</a>
+        	<a href="Intake-Form.html" class="button" >Click Here</a>
         </div>
         
        </div> 
