Modified button. Updated camelCasing Intake-Form. Changed button text. Fixed #35. Fixed #17.

--- a/Intake-Form.html
+++ b/Intake-Form.html
@@ -18,6 +18,7 @@
 				<fieldset>				
 				<div class="centerTitle"><legend><h1 id="header">OSU Cascades Counseling Practicum <br/> <br/> Client Information Sheet<h1></legend></div>
 					<br/>
+					
 					<div class="boxed">
 						<label>Date:</label>
 						<input type="date" name="date" placeholder="MM/DD/YYYY"/>
@@ -100,9 +101,9 @@
 						<label>Relation:</label>
 						<input type="text" name="emergencyRelation">
 						<label>Address:</label>
-						<input type="text" name="emergencyaddress">
+						<input type="text" name="emergencyAddress">
 						<label>Phone:</label>
-						<input type="text" name="emergencyphone">
+						<input type="text" name="emergencyPhone">
 				
 					<br/>
 					<div class="box"><h2 class="form-header">Health Insurance</h2></div>
