--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div class="banner">
 				<img src="http://osucascades.edu/sites/osucascades.edu/modules/osu_cascades_top_hat/images/osu_cascades_logo.png" class="logo" alt="Oregon State University Cascades">
 				
-				<div class="topright"><a href="#">log-in</a></div>
+				<div class="topright"><a href="#">log in</a></div>
 
 			</div>
 	
