--- a/Intake-Form.html
+++ b/Intake-Form.html
@@ -20,7 +20,7 @@
 					<br/>
 					
 					<div class="boxed">
-						<label>Date</label>
+						<label>Today's Date</label>
 						<input type="date" name="date" placeholder="MM/DD/YYYY"/>
 					<br/> <br/>
 						<label>First Name</label>
@@ -30,7 +30,7 @@
 						<label>Age</label>
 						<input type="text" name="age"/>
 						<label>Date of Birth</label>
-						<input type="text" name="Bday" placeholder="MM/DD/YYYY"/>
+						<input type="date" name="birthday" placeholder="MM/DD/YYYY"/>
 					<br/> <br/>
 						<label>Address</label>
 						<input type="text" name="address"/>
