--- a/Intake-Form.html
+++ b/Intake-Form.html
@@ -43,7 +43,7 @@
 					<br/> <br/>
 						<label>Phone</label>
 						<input type="text" name="phone"/>
-						<label>Message</label>
+						<label>May we contact you at this number if necessary?</label>
 						<p> Yes <input type="radio" name="message" value="yes" /><p>
 					 No<input type="radio" name="message" value="no" /> </p>
 					<br/>
@@ -59,7 +59,7 @@
 						<input type="text" name="workAddress"/>
 						<label>Work Phone</label>
 						<input type="text" name="workPhone"/>
-						<label>Message</label>
+						<label>May we contact this person if necessary?</label>
 						<input type="radio" name="workMessage" value="yes" />Yes
 						<input type="radio" name="workMessage" value="no" />No
 					</div>
