Updated a few more 'date' fields for consistency.

--- a/Intake-Form.html
+++ b/Intake-Form.html
@@ -73,7 +73,7 @@
 						<label>Age</label>
 						<input type="text" name="partnerAge"/>
 						<label>Date of Birth</label>
-						<input type="text" name="partnerBday" placeholder="MM/DD/YYYY"/>
+						<input type="date" name="partnerBday" placeholder="MM/DD/YYYY"/>
 					<br>
 						<label>Ocupation</label>
 						<input type="text" name="partnerOcupation"/>
@@ -96,7 +96,7 @@
 						<label>Age</label>
 						<input type="number" name="relativeAge">
 						<label>Date of Birth</label>	
-						<input type="text" name="relativeDate" placeholder="MM/DD/YYYY">
+						<input type="date" name="relativeDate" placeholder="MM/DD/YYYY">
 						<label>Relation</label>
 						<input type="text" name="relation">
 				    <br>
