--- a/Intake-Form.html
+++ b/Intake-Form.html
@@ -16,7 +16,7 @@
 
 			<form method="post" action="form.php">
 				<fieldset>				
-				<div class="centerTitle"><legend><h1 id="header">OSU Cascades Counseling Practicum <br/> <br/> Client Information Sheet<h1></legend></div>
+				<div class="centerTitle"><legend><h1 id="header">OSU Cascades Counseling Practicum <br/> <br/> Client Information Form<h1></legend></div>
 					<br/>
 					
 					<div class="boxed">
