--- a/Intake-Form.html
+++ b/Intake-Form.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<title>OSU-Cascades Counseling Practicum</title>
+		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="CSS/form.css">
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700">
 	</head>
@@ -20,46 +21,46 @@
 					<br/>
 					
 					<div class="boxed">
-						<label>Today's Date</label>
+						<label for="date">Today's Date</label>
 						<input type="date" name="date" placeholder="MM/DD/YYYY"/>
 					<br/> <br/>
-						<label>First Name</label>
+						<label for="firstName">First Name</label>
 						<input type="text" name="firstName"/>
-						<label>Last Name</label>
+						<label for="lastName">Last Name</label>
 						<input type="text" name="lastName"/> <br/> <br/>
-						<label>Age</label>
+						<label for="age">Age</label>
 						<input type="text" name="age"/>
-						<label>Date of Birth</label>
+						<label for="birthday">Date of Birth</label>
 						<input type="date" name="birthday" placeholder="MM/DD/YYYY"/>
 					<br/> <br/>
-						<label>Address</label>
+						<label for="address">Address</label>
 						<input type="text" name="address"/>
-						<label>City</label>
+						<label for="city">City</label>
 						<input type="text" name="city"/>
-						<label>State</label>
+						<label for="state">State</label>
 						<input type="text" name="state"/>
-						<label>Zip</label>
+						<label for="zip">Zip</label>
 						<input type="text" name="zip"/>
 					<br/> <br/>
-						<label>Phone</label>
+						<label for="phone">Phone</label>
 						<input type="text" name="phone"/>
-						<label>May we contact you at this number if necessary?</label>
+						<label for="message">May we contact you at this number if necessary?</label>
 						<p> Yes <input type="radio" name="message" value="yes" /><p>
 					 No<input type="radio" name="message" value="no" /> </p>
 					<br/>
-						<label>Email</label> 
+						<label for="email">Email</label> 
 						<input type="email" name="email" size="40"/>
 					<br> <br/>
-						<label>Occupation</label>
+						<label for="occupation">Occupation</label>
 						<input type="text" name="occupation"/>
-						<label>Employer</label>
+						<label for="employer">Employer</label>
 						<input type="text" name="employer"/>
 					<br> <br/>
-						<label>Employer's address</label>
+						<label for="workAddress">Employer's address</label>
 						<input type="text" name="workAddress"/>
-						<label>Work Phone</label>
+						<label for="workPhone">Work Phone</label>
 						<input type="text" name="workPhone"/>
-						<label>May we contact this person if necessary?</label>
+						<label for="workMessage">May we contact this person if necessary?</label>
 						<input type="radio" name="workMessage" value="yes" />Yes
 						<input type="radio" name="workMessage" value="no" />No
 					</div>
@@ -68,18 +69,18 @@
 
 					<div class="box"><h2 class="form-header">Spouse or Partner Information</h2></div>
 					<br/>	
-						<label>Name</label>
+						<label for="partnerName">Name</label>
 						<input type="text" name="partnerName"/>
-						<label>Age</label>
+						<label for="partnerAge">Age</label>
 						<input type="text" name="partnerAge"/>
-						<label>Date of Birth</label>
+						<label for="partnerBday">Date of Birth</label>
 						<input type="date" name="partnerBday" placeholder="MM/DD/YYYY"/>
 					<br>
-						<label>Ocupation</label>
+						<label for="partnerOcupation">Ocupation</label>
 						<input type="text" name="partnerOcupation"/>
-						<label>Employer</label>
+						<label for="partnerEmployer">Employer</label>
 						<input type="text" name="partnerEmployer"/>
-						<label>Phone</label>
+						<label for="partnerPhone">Phone</label>
 						<input type="text" name="partnerPhone"/>
 					<br/>		
 
@@ -89,61 +90,68 @@
 					<div class="box"><h2 class="form-header">Other Members of Your Household</h2></div>
 					<br/>
 					 <!-- Want to do like select a number of members of house -->
-						<label>First Name</label>
+						<label for="relativeFirstName">First Name</label>
 						<input type="text" name="relativeFirstName">
-						<label>Last Name</label>
+						<label for="relativeLastName">Last Name</label>
 						<input type="text" name="relativeLastName">
-						<label>Age</label>
+						<label for="relativeAge">Age</label>
 						<input type="number" name="relativeAge">
-						<label>Date of Birth</label>	
+						<label for="relativeDate">Date of Birth</label>	
 						<input type="date" name="relativeDate" placeholder="MM/DD/YYYY">
-						<label>Relation</label>
+						<label for="relation">Relation</label>
 						<input type="text" name="relation">
 				    <br>
 					<div class="box"><h2 class="form-header">Emergency Contact</h2></div>
 					<br/>
-						<label>Name</label>
+						<label for="emergencyName">Name</label>
 						<input type="text" name="emergencyName">
-						<label>Relation</label>
+						<label for="emergencyRelation">Relation</label>
 						<input type="text" name="emergencyRelation">
-						<label>Address</label>
+						<label for="emergencyAddress">Address</label>
 						<input type="text" name="emergencyAddress">
-						<label>Phone</label>
+						<label for="emergencyPhone">Phone</label>
 						<input type="text" name="emergencyPhone">
 				
 					<br/>
 					<div class="box"><h2 class="form-header">Health Insurance</h2></div>
 					<br/>
-						<label>Do you have health insurance?</label>
+						<label for="hasInsurance">Do you have health insurance?</label>
 						<input type="radio" name="hasInsurance" value="yes" />Yes
 						<input type="radio" name="hasInsurance" value="no" />No
-						<label>If yes, what company?</label>
+						<label for="insuranceCompany">If yes, what company?</label>
 						<input type="text" name="insuranceCompany">
 					<br/>
 					<div class="box"><h2 class="form-header"> Medical Information</h2></div>
 					<br/>
-						<label>Primary Care Physician</label>
+						<label for="PCP">Primary Care Physician</label>
 						<input type="text" name="PCP"/>
-						<label>Phone</label>
+						<label for="PCPphone">Phone</label>
 						<input type="text" name="PCPphone"/>
 					<br>
-						<label>Prescription Medications</label>
+						<label for="medications">Prescription Medications</label>
 						<input type="text" name="medications"/>
 					<br>
-						<label>Have you ever seen a counselor before?</label>
+						<label for="seenBefore">Have you ever seen a counselor before?</label>
 						<input type="radio" name="seenBefore" value="yes" />Yes
 						<input type="radio" name="seenBefore" value="no" />No
 						<br/>
-						<label>If yes, when and where?</label>
+						<label for="previousCounselor">If yes, when and where?</label>
 						<input type="text" name="previousCounselor"/>
 					<br> <br/>
-						<label>Reason for seeking help now?</label>
-						<input type="text" name="reason"/>
+						<label for="reason">Reason for seeking help now?</label>
+						<textarea>Reason for your visit.</textarea>
 					<br>
 						<input type="submit" value="Submit" />
 				</fieldset>
 			</form>
 		</div>
+
+		<div class= "footer"> <body>
+			<a href="http://osucascades.edu/">OSU-Cascades</a><br>
+    		1500 SW Chandler Avenue<br>
+    		Bend, Oregon 97702<br>
+    		541-322-3100<br> 
+    	</div> 
 
 	</body>
 
